<resources>
    <string name="app_name">中大簽到</string>

    <string name="action_skip">Skip Login</string>
    <string name="action_settings">Settings</string>
    <string name="action_log_out">登出</string>
    <string name="action_log_in">登入</string>
    <string name="action_sort_by_name">以課程名稱排序</string>
    <string name="action_sort_by_date">以課程日期排序</string>
    <string name="action_sort_by_create_date">以建立日期排序</string>
    <string name="term_of_service">使用條款</string>

    <string name="title_activity_nfc">NFCActivity</string>
    <string name="title_activity_new_course">新增課程</string>
    <string name="title_activity_course_list">課程列表</string>
    <string name="title_activity_course_detail">課程內容</string>
    <string name="title_activity_sign">簽到</string>

</resources>
