<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:title="新增課程"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_log_in"
        android:title="@string/action_log_in"
        android:orderInCategory="101"
        app:showAsAction="never" />

    <item android:id="@+id/action_sort_by_name"
        android:title="@string/action_sort_by_name"
        android:orderInCategory="102"
        app:showAsAction="never" />

    <item android:id="@+id/action_sort_by_date"
        android:title="@string/action_sort_by_date"
        android:orderInCategory="103"
        app:showAsAction="never" />

    <item android:id="@+id/action_sort_by_create_date"
        android:title="@string/action_sort_by_create_date"
        android:orderInCategory="104"
        app:showAsAction="never" />

    <item android:id="@+id/term_of_service"
        android:title="@string/term_of_service"
        android:orderInCategory="105"
        app:showAsAction="never" />

    <!--
    <item android:id="@+id/action_invalidate_token"
        android:title="invalidate token"
        android:orderInCategory="101"
        app:showAsAction="never" />-->

</menu>
